# peach

./: .cruft.json  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .yamllint.yaml  .zenodo.json  AUTHORS.md  AUTHORS.rst  CHANGES.md  CHANGES.rst  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  Makefile  README.md  README.rst  docker-compose.yml  environment-backend-full.yml  environment-backend.yml  environment-dev-full.yml  environment-dev.yml  environment-docs.yml  environment-frontend-full.yml  environment-frontend.yml  environment-full.yml  environment.yml  pyproject.toml  run.sh  run_gunicorn.sh  tox.ini  tox.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: 0001-GENERIC-ISSUE-TEMPLATE.yml  0002-BUG-REPORT.yml  0003-FEATURE-REQUEST.yml  0004-QUESTION-SUPPORT.yml
.github/workflows/: bump-version.yml  cache-cleaner.yml  codeql.yml  dependency-review.yml  first-pull-request.yml  label.yml  main.yml  publish-pypi.yml  scorecard.yml  tag-testpypi.yml  workflow-warning.yml
CI/: requirements_ci.in  requirements_ci.txt
deployment/: restart_service  restart_service.conf
docs/: Makefile  conf.py  deployment.md  index.md  index.rst  installation.md  installation.rst  make.bat  risk_functions.py  storage.md  usage.md  usage.rst
docs/factsheets/: Dockerfile  README.md  build.sh  references.bib
docs/factsheets/en/: A1.md  A2.md  A3.md  A4.md  A5.md  A6.md  A7.md  A8.md  B1.md  B2.md  B3.md  B4.md  B5.md  B6.md  C1.md  C2.md  C3.md  _quarto.yml  custom.scss  glossary.yml  index.md  references.bib  references.md
docs/factsheets/fr/: A1.md  A2.md  A3.md  A4.md  A5.md  A6.md  A7.md  A8.md  B1.md  B2.md  B3.md  B4.md  B5.md  B6.md  C1.md  C2.md  C3.md  _quarto.yml  custom.scss  glossary.yml  index.md  references.md
docs/notebooks/: Joint_Example.ipynb  article_figures.ipynb  introduction.md  metho_figures.ipynb
pre_workflow_data/: 1_download_realtime_data.ipynb  2_remove_realtime_outliers.ipynb  3_merge_with_historical_data.ipynb  4_preproc.ipynb  5_prep_ts.ipynb  6_get_pot.ipynb  7_prep_slr_data.ipynb  README.md  idf.py
src/peach/: __init__.py  test_utils.py
src/peach/backend/: README.md  __init__.py  compute_hazardthreshold.py  compute_indicators.py  config.yml  echo.py  gunicorn.conf.py
src/peach/common/: config.py  logger.py  request.py
src/peach/data/: zelinka_ecs.json
src/peach/data/ssp_likelihoods/: likelihood_CP16.nc  likelihood_LR21.nc
src/peach/frontend/: __init__.py  cbcl_utils.py  copula.py  gui.ipynb  gui_serve.py  idf_parameters.py  jp_parameters.py  parameters.py  views.py  warm.py  wl_parameters.py
src/peach/frontend/config/: application.yml  indicator_select.yml  indicators.yml  station_select.yml
src/peach/frontend/data/: idf_regions.json
src/peach/risk/: __init__.py  bootstrap.py  fit.py  idf.py  mixture.py  priors.py  wl.py  xmixture.py
src/peach/testing/: __init__.py  utils.py
src/portail_ing/: __init__.py  test_utils.py
src/portail_ing/backend/: README.md  compute_hazardthreshold.py  compute_indicators.py  config.yml
src/portail_ing/common/: config.py
src/portail_ing/data/: sherwood_ecs.json  ssp_likelihoods.nc
src/portail_ing/data/ssp_likelihoods/: likelihood_CP20.nc  likelihood_FM15.nc  likelihood_R17.nc  likelihood_S23.nc
src/portail_ing/frontend/: __init__.py  cbcl_utils.py  gui.ipynb  gui_serve.py  idf_parameters.py  jp_parameters.py  parameters.py  views.py  warm.py  wl_parameters.py
src/portail_ing/frontend/config/: indicators.yml
src/portail_ing/frontend/data/: ahccd.csv  stations_variables.csv
src/portail_ing/risk/: base.py  bootstrap.py  config_portail-ing.yml  idf.py  wl.py
tests/: conftest.py  run_tests.py  test_backend.py  test_bootstrap.py  test_idf_parameters.py  test_jp_parameters.py  test_jp_utils.py  test_parameters.py  test_portail_ing.py  test_priors.py  test_ref_period_sensitivity.py  test_views.py  test_wl_parameters.py  test_xmixture.py  testeur.py
