[build-system]
requires = ["flit_core >=3.11.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "peach"
authors = [
  {name = "Sarah-Claude Bourdeau-Goulet", email = "bourdeau-goulet.sarah-claude@ouranos.ca"},
  {name = "David Huard", email = "huard.david@ouranos.ca"},
  {name = "Gabriel Rondeau-Genesse", email = "rondeau-Genesse.Gabriel@ouranos.ca"},
  {name = "Sarah Gammon", email = "gammon.sarah@ouranos.ca"}
]
maintainers = [
  {name = "David Huard", email = "huard.david@ouranos.ca"},
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10.0"
keywords = ["peach"]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed"
]
dynamic = ["description", "version"]
dependencies = [
  "copulae",
  "dask",
  "flexparser<0.5",
  "geopandas",
  "h5netcdf",
  "h5py",
  "lmoments3",
  "numcodecs<=0.15.1", # Zarr < 3 is not compatible with latest numcodecs
  "numpy",
  "openturns>=1.24",
  "pandas",
  "pyextremes",
  "pygeoapi",
  "pyyaml",
  "s3fs",
  "scipy",
  "statsmodels",
  "xarray",
  "xclim",
  "zarr"
]

[project.optional-dependencies]
app = [
  "bokeh",
  "holoviews",
  "hvplot",
  "ipykernel",
  "ipyleaflet",
  "ipywidgets",
  "jupyter_client",
  "notebook",
  "panel",
  "param"
]
pre = [
  "geopy",
  "h5py",
  "netCDF4",
  "xesmf"
]
dev = [
  # Dev tools and testing
  "bump-my-version >=1.2.3",
  "coverage >=7.5.0",
  "deptry >=0.23.1",
  "flake8 >=7.3.0",
  "flake8-rst-docstrings >=0.4.0",
  "flit >=3.11.0,<4.0",
  "mypy >=1.18.2",
  "numpydoc >=1.9.0",
  "pip >=25.2",
  "pre-commit >=3.5.0",
  "pytest >=8.3.2",
  "pytest-cov >=5.0.0",
  "ruff >=0.14.3",
  "tox >=4.30.3",
  "vulture >=2.14",
  "watchdog >=4.0.0"
]
docs = [
  # Documentation and examples
  "figanos",
  "ipykernel",
  "ipython",
  "jupyter_client",
  "nbsphinx >=0.9.5",
  "sphinx-book-theme",
  "sphinx-codeautolink >=0.16.2",
  "sphinx-copybutton",
  "sphinx-intl",
  "sphinx >=7.1.0,<8.2"
]

[project.urls]
"Homepage" = "https://cs-peach.readthedocs.io/"
"Changelog" = "https://cs-peach.readthedocs.io/en/stable/changes.html"
"About Ouranos" = "https://www.ouranos.ca/en/"
"Source" = "https://github.com/ouranosinc/peach"
"Issue tracker" = "https://github.com/ouranosinc/peach/issues"

[tool]

[tool.black]
target-version = [
  "py312"
]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
commit_args = "--no-verify"
tag = false
tag_name = "v{new_version}"
allow_dirty = false
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "CITATION.cff"
include_bumps = ["release"]
search = "^version: \"[0-9]+\\.[0-9]+\\.[0-9]\""
regex = true
replace = "version: \"{new_version}\""

[[tool.bumpversion.files]]
filename = "src/peach/backend/config.yml"
search = "api_version: {current_version}"
replace = "api_version: {new_version}"

[[tool.bumpversion.files]]
filename = "peach/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "tests/test_peach.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = ".cruft.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.codespell]
ignore-words-list = "astroid,ges,ot,socio-economic"
skip = "*.bib,*.po,*.ts,docs/factsheets/fr/*.md,docs/factsheets/fr/*.yml,docs/notebooks/introduction.md"

[tool.coverage.paths]
source = ["src/peach/", "*/site-packages/peach/"]

[tool.coverage.run]
omit = ["tests/*.py"]
relative_files = true
source = ["peach"]

[tool.deptry]
extend_exclude = ["docs"]
pep621_dev_dependency_groups = ["dev", "docs"]

[tool.flit.sdist]
include = [
  ".zenodo.json",
  "AUTHORS.md",
  "CHANGES.md",
  "CONTRIBUTING.md",
  "LICENSE",
  "Makefile",
  "README.md",
  "environment-dev.yml",
  "environment-docs.yml",
  "docs/_static/_images/*.gif",
  "docs/_static/_images/*.jpg",
  "docs/_static/_images/*.png",
  "docs/_static/_images/*.rst",
  "docs/_static/_images/*.md",
  "docs/Makefile",
  "docs/conf.py",
  "docs/make.bat",
  "tests/*.py",
  "tox.ini",
  "src/peach",
  "src/peach/data/*.json",
  "src/peach/data/*.nc",
  "src/peach/data/ssp_likelihoods/*.nc",
  "src/peach/frontend/*.ipynb",
  "src/peach/frontend/data/*.csv",
  "src/peach/risk/*.yml",
  "panel_pipeline/*.csv",
  "panel_pipeline/*.ipynb",
  "panel_pipeline/*.yml",
  "pre_workflow/*.csv",
  "pre_workflow/*.ipynb",
  "pre_workflow/*.json",
  "pre_workflow/*.py",
  "pre_workflow/*.yml"
]
exclude = [
  "*.py[co]",
  "__pycache__",
  ".coveralls.yml",
  ".cruft.json",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
  ".readthedocs.yml",
  ".yamllint.yaml",
  "docs/_*",
  "docs/apidoc/modules.rst",
  "docs/apidoc/peach*.rst",
  "docs/locales"
]

[tool.mypy]
files = "."
python_version = "3.10"
show_error_codes = true
strict = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  # Don't require test functions to include types
  "tests.*"
]
allow_untyped_defs = true
disable_error_code = "attr-defined"
ignore_missing_imports = true

[tool.numpydoc_validation]
checks = [
  "all", # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01"
]
# remember to use single quotes for regex in TOML
exclude = [
  # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--color=yes",
  "--verbose"
]
filterwarnings = ["ignore::UserWarning"]
testpaths = ["tests"]
markers = [
  "online: marks tests that require an internet connection",
  "backend: marks tests that require a local backend server running"
]

[tool.ruff]
src = ["peach"]
line-length = 150
target-version = "py38"
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs",
  "pre_workflow"
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "D213", # multi-line-summary-second-line
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "COM", # commas
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401" # non-imperative-mood
]
preview = true
select = [
  "B", # bugbear
  "BLE", # blind-except
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "F", # pyflakes
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "I", # imports
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
known-first-party = ["peach"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 1
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["E402"]
"src/peach/**/__init__.py" = ["F401", "F403"]
"tests/**" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.vulture]
exclude = []
ignore_decorators = ["@pytest.fixture"]
ignore_names = []
min_confidence = 90
paths = ["src/peach", "tests"]
sort_by_size = true
